README - 06/04/2003
-------------------


CHANGES IN Mini-XML 0.93

	- Added mxmlAdd() and mxmlRemove() functions to add and
	  remove nodes from a tree.  This provides more
	  flexibility over where the nodes are inserted and
	  allows nodes to be moved within the tree as needed.
	- mxmlLoadFile() now correctly handles comments.
	- mxmlLoadFile() now supports the required "gt", "quot",
	  and "nbsp" character entities.
	- mxmlSaveFile() now uses newlines as whitespace
	  when valid to do so.
	- mxmlFindElement() now also takes attribute name and
	  attribute value string arguments to limit the search
	  to specific elements with attributes and/or values.
	  NULL pointers can be used as "wildcards".
	- Added uninstall target to makefile, and auto-reconfig
	  if Makefile.in or configure.in are changed.
	- mxmlFindElement(), mxmlWalkNext(), and mxmlWalkPrev()
	  now all provide "descend" arguments to control whether
	  they descend into child nodes in the tree.
	- Fixed some whitespace issues in mxmlLoadFile().
	- Fixed Unicode output and whitespace issues in
	  mxmlSaveFile().
	- mxmlSaveFile() now supports a whitespace callback to
	  provide more human-readable XML output under program
	  control.


CHANGES IN Mini-XML 0.92

	- mxmlSaveFile() didn't return a value on success.


CHANGES IN Mini-XML 0.91

	- mxmlWalkNext() would go into an infinite loop.


CHANGES IN Mini-XML 0.9

	- Initial public release.